kubernetes/infrastructure/monitoring/kube-prometheus-stack/alertmanager-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - alertmanager.stonegarden.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alertmanager-operated
          port: 9093
